# LeekAI

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/leekai/: GUI.py  __init__.py  __main__.py  architecture_builder.py  cli.py  compare.py  data_loader.py  layers.py  main.py  model.py  train.py
